# subdex-xc-network

./: .gitignore  README.md  build_collators_from_local.sh  clear_all.sh  deploy.sh  docker-compose-rococo-local-relay.yml  docker-compose-traefik.yml  docker-compose-validatorsOnly.yml  docker-compose-xc.yml  register_parachain.sh  run_network_tests.sh  start_collators.sh  start_generic_chain.sh  start_rococo_testnet.sh  start_rococo_tick.sh  start_subdex_chain.sh  traefik.yml  wait-for-it.sh
chainspec/: rococo_local.json  rococo_local_plain.json
docker/: build-containers.sh  dex-chain-collator.dockerfile  generic-chain-collator.dockerfile  parachain-registrar.dockerfile  start_dex_collator.sh  start_generic_collator.sh
docker/register/: index.js  package.json
subdex-network-tests/: Cargo.toml
subdex-network-tests/src/: assets.rs  dex_pallet.rs  dex_xcmp.rs  lib.rs  main.rs  parachains.rs  token_dealer.rs
