[package]
name = "subdex-network-tests"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2018"


[dependencies]
substrate-subxt = "0.11.0" 
sp-core = { version = "2.0.0-rc5", features = ["full_crypto"]}
sp-keyring = { version = "2.0.0-rc5" }
frame-system = "2.0.0-rc5"
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
async-std = { version = "1.6.4", features = ["attributes"] }
 
